make use of requestSearchResults on startpage

--- a/src/htmls/startpage.html
+++ b/src/htmls/startpage.html
@@ -38,8 +38,7 @@
             if (string.length == 0)
                 return;
 
-            var url = window.arora.searchUrl(string);
-            window.location.href = url;
+            window.arora.search(string);
         }
         //]]>
     </script>
